--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_code_split
+name: make_feed_screen
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,6 +29,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.0.0
+  camera: ^0.8.1+4
+  permission_handler: ^8.1.2
+  app_settings: ^4.1.1
+  provider: ^5.0.0
+  path: ^1.8.0
+  path_provider: ^2.0.2
+  local_image_provider: ^4.0.1
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
+#  flutter_facebook_login: ^3.0.0
+  flutter_login_facebook: ^1.0.0-nullsafety.1
+  cloud_firestore: ^2.4.0
+#  flutter_tags: ^0.4.9+1
+  flutter_tags: ^1.0.0-nullsafety.1
+  image: ^3.0.2
+  firebase_storage: ^10.0.1
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
