--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.1082531164101-7ggh81is9l493uji2am4icvutttt5bsb</string>
 	<key>API_KEY</key>
-	<string></string>
+	<string>AIzaSyDxDC7M0BIVvDVY467AYZA9H36EJ32_bHQ</string>
 	<key>GCM_SENDER_ID</key>
 	<string>1082531164101</string>
 	<key>PLIST_VERSION</key>
