--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image: ^3.0.2
   firebase_storage: ^10.0.1
   rxdart: ^0.27.1
+  image_gallery_saver: ^1.6.9
+
 
 dev_dependencies:
   flutter_test:
